--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <link href="css/hacker.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
  </head>
 <body>
 <h1>Under Development</h1>
