--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
  </head>
 <body>
 	
-	<div class="container" style="text-align:center;">
-		<div class="jumbotron">
+	
+		<div class="jumbotron" style="text-align:center;">
 		    <img src="https://i.ibb.co/qCbwcq2/image.png" class="center" alt="" />
 			<h1> Mohammed <br> Al Kalbani</h1>
 			
 		</div>
-			
+	<div class="container" style="text-align:center;">		
 	
 	<!-- about section -->
 	<div class="row"  style="text-align:center;">
