--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							Instagram	
 							</div>
 							<div class="panel-body">
-							<a class="btn btn-primary" href="instagram.com/kf0k" > <i class="fa fa-instagram fa-5x"></i><h4>@kf0k</h3></a>
+							<a class="btn btn-primary" href="https://instagram.com/kf0k" > <i class="fa fa-instagram fa-5x"></i><h4>@kf0k</h3></a>
 							</div>
 							<hr>
 							
