--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 		<h1>./About</h1>
 			<hr>
                 <div class="well well-lg">
-				<p>&lt;/&gt; Penetration Tester who works at Hemayah Information Security.</p>
+				<p>&lt;/&gt; Penetration Tester who works at NSSG.</p>
 				<p>&lt;/&gt; Intersted in all cyber security fields from web exploiting, revese engineering malware analysis to cryptography.</p>
-				<p>&lt;/&gt; Keen eye for spotting potential security risks and flows. Specialize in network hardware building, configuring and monitoring security software installation and working to prevent cyber attacks. </p>
+				<p>&lt;/&gt; Keen eye for spotting potential security risks and flows. </p>
+				<p>&lt;/&gt; Specialize in network hardware building, configuring and monitoring security software installation and working to prevent cyber attacks. </p>
 				</div>
 	
 	
