--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<h1>./About</h1>
 		<hr>
 		<div class="well well-lg">
-			<p>&lt;/&gt; Penetration Tester who works at NSSG.</p>
+			<p>&lt;/&gt; Penetration Tester / Red Team.</p>
 			<p>&lt;/&gt; Intersted in all cyber security fields from web exploiting, revese engineering malware analysis to cryptography.</p>
 			<p>&lt;/&gt; Keen eye for spotting potential security risks and flows. Specialize in network hardware building, configuring and monitoring security software installation and working to prevent cyber attacks. </p>
 		</div>
