--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		<hr>
 		<div class="well well-lg">
-			<a class="btn btn-primary danger" href="https://kf0k.github.io/blog">./Blog</a>
+			<a class="btn btn-primary danger" href="https://kf0k-blog.gitbook.io/ctf/">./Blog</a>
 		</div>
 		<h1>./About</h1>
 		<hr>
