--- a/index.html
+++ b/index.html
@@ -48,8 +48,22 @@
 		<h1>./Skills</h1>
 		<hr>
 		<div class="well well-lg" style="text-align:center;">
-
+			
 			<!-- 1st skill -->
+			<div class="panel panel-primary">
+				<h3 style=" display:inline-block;" class="panel-heading">
+					<div style="float:left; "><img src="https://i.ibb.co/rtjcP4g/icons8-active-directory-64.png" alt="" width="50" height="50"></div>
+					<div>Active Directory</div>
+					<div style="clear: left;"/>
+				</h3>
+				<legend>
+				</legend>
+				<div class="progress progress-striped active">
+					<div class="progress-bar  progress-bar-danger" style="width: 80%"></div>
+				</div>
+			</div>
+
+			<!-- 2nd skill -->
 			<div class="panel panel-primary">
 				<h3 style=" display:inline-block;" class="panel-heading">
 					<div style="float:left; "><img src="https://i.ibb.co/Xbnf84R/web.png" alt="" width="50" height="50"></div>
@@ -62,8 +76,22 @@
 					<div class="progress-bar  progress-bar-danger" style="width: 80%"></div>
 				</div>
 			</div>
+			
+			<!-- 3rd skill -->
+			<div class="panel panel-primary">
+				<h3 style=" display:inline-block;" class="panel-heading">
+					<div style="float:left; "><img src="https://i.ibb.co/GPrRnx1/Phishing.png" alt="" width="50" height="50"></div>
+					<div>Red Teaming</div>
+					<div style="clear: left;"/>
+				</h3>
+				<legend>
+				</legend>
+				<div class="progress progress-striped active">
+					<div class="progress-bar  progress-bar-danger" style="width: 80%"></div>
+				</div>
+			</div>
 
-			<!-- 2nd skill -->
+			<!-- 4th skill -->
 			<div class="panel panel-primary">
 				<h3 style=" display:inline-block;" class="panel-heading">
 					<div style="float:left; "><img src="https://i.ibb.co/swq4RQs/mobile.png" alt="" width="50" height="50"></div>
@@ -77,21 +105,8 @@
 				</div>
 			</div>
 
-			<!-- 3rd skill -->
-			<div class="panel panel-primary">
-				<h3 style=" display:inline-block;" class="panel-heading">
-					<div style="float:left; "><img src="https://i.ibb.co/pzzQP9W/install.png" alt="" width="50" height="50"></div>
-					<div>Network Engineering</div>
-					<div style="clear: left;"/>
-				</h3>
-				<legend>
-				</legend>
-				<div class="progress progress-striped active">
-					<div class="progress-bar  progress-bar-danger" style="width: 90%"></div>
-				</div>
-			</div>
 
-			<!-- 4th skill -->
+			<!-- 5th skill -->
 			<div class="panel panel-primary">
 				<h3 style=" display:inline-block;" class="panel-heading">
 					<div style="float:left; "><img src="https://i.ibb.co/B43ym3D/malware.png" alt="" width="50" height="50"></div>
@@ -105,19 +120,7 @@
 				</div>
 			</div>
 
-			<!-- 5th skill -->
-			<div class="panel panel-primary">
-				<h3 style=" display:inline-block;" class="panel-heading">
-					<div style="float:left; "><img src="https://i.ibb.co/ZBq35cH/coding.png" alt="" width="50" height="50">
-						Coding
-						<div style="clear: left;"/>
-				</h3>
-				<legend>
-				</legend>
-				<div class="progress progress-striped active">
-					<div class="progress-bar  progress-bar-info" style="width: 55%"></div>
-				</div>
-			</div>
+		
 			<div class="col-lg-115">
 				<div class="panel panel-primary">
 					<h3>Hack the Box</h3>
