--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<legend>
 				</legend>
 				<div class="progress progress-striped active">
-					<div class="progress-bar  progress-bar-danger" style="width: 80%"></div>
+					<div class="progress-bar  progress-bar-secondary" style="width: 85%"></div>
 				</div>
 			</div>
 
@@ -87,7 +87,7 @@
 				<legend>
 				</legend>
 				<div class="progress progress-striped active">
-					<div class="progress-bar  progress-bar-danger" style="width: 80%"></div>
+					<div class="progress-bar  progress-bar-info" style="width: 70%"></div>
 				</div>
 			</div>
 
