--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 		<div class="well well-lg">
 			<p>&lt;/&gt; Penetration Tester / Red Team.</p>
 			<p>&lt;/&gt; Intersted in all cyber security fields from web exploiting, revese engineering malware analysis to cryptography.</p>
-			<p>&lt;/&gt; Keen eye for spotting potential security risks and flows. Specialize in network hardware building, configuring and monitoring security software installation and working to prevent cyber attacks. </p>
+			<p>&lt;/&gt; Keen eye for spotting potential security risks and flows.</p> 
+			<p>&lt;/&gt; Specialize in network hardware building, configuring and monitoring security software installation and working to prevent cyber attacks. </p>
 		</div>
 
 		<!-- Skills section -->
@@ -59,7 +60,7 @@
 				<legend>
 				</legend>
 				<div class="progress progress-striped active">
-					<div class="progress-bar  progress-bar-secondary" style="width: 85%"></div>
+					<div class="progress-bar  progress-bar-danger" style="width: 90%"></div>
 				</div>
 			</div>
 
@@ -73,7 +74,7 @@
 				<legend>
 				</legend>
 				<div class="progress progress-striped active">
-					<div class="progress-bar  progress-bar-danger" style="width: 80%"></div>
+					<div class="progress-bar  progress-bar-dark" style="width: 80%"></div>
 				</div>
 			</div>
 			
