--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<legend>
 				</legend>
 				<div class="progress progress-striped active">
-					<div class="progress-bar  progress-bar-dark" style="width: 80%"></div>
+					<div class="progress-bar  progress-bar-danger" style="width: 85%"></div>
 				</div>
 			</div>
 			
@@ -102,7 +102,7 @@
 				<legend>
 				</legend>
 				<div class="progress progress-striped active">
-					<div class="progress-bar  progress-bar-warning" style="width: 65%"></div>
+					<div class="progress-bar  progress-bar-info" style="width: 65%"></div>
 				</div>
 			</div>
 
