--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="well well-lg">
 			<p>&lt;/&gt; Penetration Tester / Red Team.</p>
 			<p>&lt;/&gt; Intersted in all cyber security fields from web exploiting, revese engineering malware analysis to cryptography.</p>
-			<p>&lt;/&gt; Keen eye for spotting potential security risks and flows.</p>
+			<p>&lt;/&gt; Keen eye for spotting potential security risks and flows.</p> 
 			<p>&lt;/&gt; Specialize in network hardware building, configuring and monitoring security software installation and working to prevent cyber attacks. </p>
 		</div>
 
@@ -50,40 +50,12 @@
 		<h1>./Skills</h1>
 		<hr>
 		<div class="well well-lg" style="text-align:center;">
-
+			
 			<!-- 1st skill -->
 			<div class="panel panel-primary">
 				<h3 style=" display:inline-block;" class="panel-heading">
-					<div style="float:left; "><img src="https://i.ibb.co/Xbnf84R/web.png" alt="" width="50" height="50"></div>
-					<div>Web Penetration Tester</div>
-					<div style="clear: left;"/>
-				</h3>
-				<legend>
-				</legend>
-				<div class="progress progress-striped active">
-					<div class="progress-bar  progress-bar-danger" style="width: 80%"></div>
-				</div>
-			</div>
-
-			<!-- 2nd skill -->
-			<div class="panel panel-primary">
-				<h3 style=" display:inline-block;" class="panel-heading">
-					<div style="float:left; "><img src="https://i.ibb.co/swq4RQs/mobile.png" alt="" width="50" height="50"></div>
-					<div>Mobile App Penetration Testing</div>
-					<div style="clear: left;"/>
-				</h3>
-				<legend>
-				</legend>
-				<div class="progress progress-striped active">
-					<div class="progress-bar  progress-bar-warning" style="width: 65%"></div>
-				</div>
-			</div>
-
-			<!-- 3rd skill -->
-			<div class="panel panel-primary">
-				<h3 style=" display:inline-block;" class="panel-heading">
-					<div style="float:left; "><img src="https://i.ibb.co/pzzQP9W/install.png" alt="" width="50" height="50"></div>
-					<div>Network Engineering</div>
+					<div style="float:left; "><img src="https://i.ibb.co/rtjcP4g/icons8-active-directory-64.png" alt="" width="50" height="50"></div>
+					<div>Active Directory</div>
 					<div style="clear: left;"/>
 				</h3>
 				<legend>
@@ -93,7 +65,50 @@
 				</div>
 			</div>
 
+			<!-- 2nd skill -->
+			<div class="panel panel-primary">
+				<h3 style=" display:inline-block;" class="panel-heading">
+					<div style="float:left; "><img src="https://i.ibb.co/Xbnf84R/web.png" alt="" width="50" height="50"></div>
+					<div>Web Penetration Tester</div>
+					<div style="clear: left;"/>
+				</h3>
+				<legend>
+				</legend>
+				<div class="progress progress-striped active">
+					<div class="progress-bar  progress-bar-danger" style="width: 85%"></div>
+				</div>
+			</div>
+			
+			<!-- 3rd skill -->
+			<div class="panel panel-primary">
+				<h3 style=" display:inline-block;" class="panel-heading">
+					<div style="float:left; "><img src="https://i.ibb.co/GPrRnx1/Phishing.png" alt="" width="50" height="50"></div>
+					<div>Red Teaming</div>
+					<div style="clear: left;"/>
+				</h3>
+				<legend>
+				</legend>
+				<div class="progress progress-striped active">
+					<div class="progress-bar  progress-bar-info" style="width: 70%"></div>
+				</div>
+			</div>
+
 			<!-- 4th skill -->
+			<div class="panel panel-primary">
+				<h3 style=" display:inline-block;" class="panel-heading">
+					<div style="float:left; "><img src="https://i.ibb.co/swq4RQs/mobile.png" alt="" width="50" height="50"></div>
+					<div>Mobile App Penetration Testing</div>
+					<div style="clear: left;"/>
+				</h3>
+				<legend>
+				</legend>
+				<div class="progress progress-striped active">
+					<div class="progress-bar  progress-bar-info" style="width: 65%"></div>
+				</div>
+			</div>
+
+
+			<!-- 5th skill -->
 			<div class="panel panel-primary">
 				<h3 style=" display:inline-block;" class="panel-heading">
 					<div style="float:left; "><img src="https://i.ibb.co/B43ym3D/malware.png" alt="" width="50" height="50"></div>
@@ -103,23 +118,11 @@
 				<legend>
 				</legend>
 				<div class="progress progress-striped active">
-					<div class="progress-bar  progress-bar-success" style="width: 70%"></div>
+					<div class="progress-bar  progress-bar-success" style="width: 50%"></div>
 				</div>
 			</div>
 
-			<!-- 5th skill -->
-			<div class="panel panel-primary">
-				<h3 style=" display:inline-block;" class="panel-heading">
-					<div style="float:left; "><img src="https://i.ibb.co/ZBq35cH/coding.png" alt="" width="50" height="50">
-						Coding
-						<div style="clear: left;"/>
-				</h3>
-				<legend>
-				</legend>
-				<div class="progress progress-striped active">
-					<div class="progress-bar  progress-bar-info" style="width: 55%"></div>
-				</div>
-			</div>
+		
 			<div class="col-lg-115">
 				<div class="panel panel-primary">
 					<h3>Hack the Box</h3>
