--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
 			<div class="container pt-3">
 			<div class="col-md-12">
 				<a class="btn btn-link btn-floating btn-lg" href="instagram.com/kf0k"> <i class="fa fa-instagram"></i><h4></h3></a>
-				<a class="btn btn-link btn-floating btn-lg" href="https://twitter.com/_kf0k/"> <i class="fa fa-twitter"></i><h4></h3></a>			<a class="btn btn-link btn-floating btn-lg" href="https://om.linkedin.com/in/mohammed-al-kalbani-5612b41b9"> <i class="fa fa-linkedin"></i><h4></h3></a>
+				<a class="btn btn-link btn-floating btn-lg" href="https://twitter.com/_kf0k/"> <i class="fa fa-twitter"></i><h4></h3></a>			
+				<a class="btn btn-link btn-floating btn-lg" href="http://linkedin.com/in/kf0k-mohammed-al-kalbani"> <i class="fa fa-linkedin"></i><h4></h3></a>
 			</div>
 			<div class="col-md-12">
 				<p>Mohammed Al Kalbani. &copy; 2021</p>
