--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="jumbotron" style="text-align:center;">
-	<img src=https://i.ibb.co/sjZyTY3/20201108-192101029-i-OS-removebg-preview.png"class="center" alt="" />
+	<img src=https://i.ibb.co/sjZyTY3/20201108-192101029-i-OS-removebg-preview.png"class="center" style="width: 13%" alt="" />
 
 	<div id="app">
 		<h1>
