--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<div class="well well-lg">
 			<div class="row tall-row">
 				<div class="container pt-3">
+					<img class="img" href="#" src="https://media.eu.badgr.com/uploads/badges/12c2775e-f01b-4b4e-9f3d-35dc6e08810b.png" style="width: 10%"></a>							   
 					<img class="img" href="#" src="https://www.pentesteracademy.com/img/paces.png" style="width: 10%"></a>
 					<img class="img" href="#" src="https://media.eu.badgr.com/uploads/badges/assertion-Mfft4atASOyfNNufJv1_TA.png"style="width: 10%"></a>
 					<img class="img" href="#" src="https://app.hackthebox.eu/images/icons/ic-prolabs/ic-aptlabs-overview.svg"style="width: 13%"></a>
